vs코드에 git 연동하기 url추가함 - readme 파일 확인해 보셈

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
     "command": "chrome",
     
     "windows": {
-    
+    // 집에가서 크롬 경로 설정해주기
     "command": "C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe"
     
     },
